--- a/public/login.html
+++ b/public/login.html
@@ -131,12 +131,13 @@
                 const result = await response.json();
 
                 if (result.success) {
-                    localStorage.setItem('usuario', JSON.stringify(result.data));
+                    localStorage.setItem('usuario', JSON.stringify(result.user));
                     window.location.href = '/chat';
                 } else {
-                    alert('Erro: ' + result.error);
+                    alert('Erro: ' + (result.message || result.error));
                 }
             } catch (error) {
+                console.error(error);
                 alert('Erro de conexão ao servidor');
             }
         });
